# cc-plugin

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/actions/setup_python_env/: action.yml
.github/workflows/: automated-tests.yml  create-release.yml  reusable-tests.yml
docs/: branch-protection.md
hooks/: stop_phrase_guard.py  use_uv.py
plugins/natelandau-recall/.claude-plugin/: plugin.json
plugins/natelandau-recall/agents/: backlog-opportunity-reviewer.md  backlog-validity-reviewer.md  memory-entry-reviewer.md  redundancy-reviewer.md
plugins/natelandau-recall/commands/: review-memory.md
plugins/natelandau-recall/hooks/: hooks.json  natelandau-recall.toml.example  precompact.py  recall-bootstrap.py  recall-path.py  sessionend.py  sessionstart.py
plugins/natelandau-recall/hooks/lib/: __init__.py  claude_runner.py  config.py  frontmatter.py  headless.py  io.py  memory.py  store.py  sweep.py  transcript.py
plugins/natelandau-recall/hooks/precompact/: __init__.py  _registry.py
plugins/natelandau-recall/hooks/prompts/: _capture-criteria.md  bootstrap-extract.md  bootstrap-merge.md  sweep.md
plugins/natelandau-recall/hooks/recall/: __init__.py  bootstrap.py  config.py  frontmatter.py  headless.py  injector.py  io.py  paths.py  runner.py  safety.py  store.py  sweep.py  transcript.py
plugins/natelandau-recall/hooks/sessionend/: __init__.py  run_sweep.py
plugins/natelandau-recall/hooks/sessionstart/: __init__.py  _registry.py  inject_memory.py
plugins/natelandau-recall/skills/recall-backlog/: SKILL.md
plugins/natelandau-recall/skills/recall-bootstrap/: SKILL.md
plugins/natelandau-recall/skills/recall-handoff/: SKILL.md
plugins/natelandau-recall/skills/recall-review/: SKILL.md
plugins/natelandau-toolkit/.claude-plugin/: plugin.json
plugins/natelandau-toolkit/agents/: comment-pruner.md  doc-drift-reviewer.md  review-finder.md  review-verifier.md  test-runner.md
plugins/natelandau-toolkit/commands/: create-prd.md  organize.md  refactor.md
plugins/natelandau-toolkit/hooks/: capture_followups.py  config_protection.py  config_protection.rules.toml  enforce_branch_protection.py  enforce_commit_message.py  hooks.json  natelandau-toolkit.toml.example  posttooluse.py  pre_tool_dispatcher.py  pretooluse.py  protect_secrets.py  protect_secrets.rules.toml  protect_system.py  protect_system.rules.toml  require_pr_checks.py  sessionend.py  sessionstart.py  stop.py  stop_phrase_guard.py  stop_phrase_guard.rules.toml  use_uv.py
plugins/natelandau-toolkit/hooks/lib/: __init__.py  bash.py  config.py  dispatch.py  io.py  paths.py  profiles.py  registry.py  rules.py  state.py  transcript.py
skills/beanie-odm/: SKILL.md
skills/documentation-writer/: SKILL.md
skills/documentation-writer/references/: tropes.md
skills/inline-comments/: SKILL.md
skills/python-standards/: SKILL.md
tests/: __init__.py  _env.py  _helpers.py  conftest.py  test_branch_protection.py  test_capture_followups.py  test_config.py  test_config_protection.py  test_dispatch.py  test_enforce_commit_message.py  test_lib_bash.py  test_lib_io.py  test_lib_paths.py  test_lib_profiles.py  test_lib_rules.py  test_lib_state.py  test_lib_transcript.py  test_manifest.py  test_pre_tool_dispatcher.py  test_pretooluse_dispatcher.py  test_protect_secrets.py  test_protect_system.py  test_registry.py  test_require_pr_checks.py  test_stage_dispatchers.py  test_stop_dispatcher.py  test_stop_phrase_guard.py  test_use_uv.py
tests/recall/: __init__.py  _store_factory.py  conftest.py  test_bootstrap.py  test_bootstrap_prompts.py  test_claude_runner.py  test_config.py  test_config_headless.py  test_frontmatter.py  test_hooks.py  test_inject_memory.py  test_injector.py  test_lib_drift.py  test_memory.py  test_recall_bootstrap_cli.py  test_recall_manifest.py  test_recall_path.py  test_runner.py  test_safety.py  test_stage_noop.py  test_store.py  test_sweep.py  test_sweep_dispatcher.py  test_transcript.py  test_transcript_window.py
(+50 files in other folders)
