[project]
    description     = "Dev tooling for the natelandau-toolkit Claude Code plugin."
    name            = "natelandau-toolkit"
    requires-python = ">=3.12"
    version         = "0.3.0"

[dependency-groups]
    dev = [
        "commitizen>=4.15.1",
        "prek>=0.3.13",
        "pytest>=9.0.3",
        "ruff>=0.15.12",
        "ty>=0.0.34",
        "typos>=1.46.1",
        "yamllint>=1.38.0",
    ]

[tool.uv]
    package = false

[tool.commitizen]
    bump_message               = "bump(release): v$current_version → v$new_version"
    changelog_merge_prerelease = true
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version_files              = ["plugins/natelandau-toolkit/.claude-plugin/plugin.json:\"version\""]
    version_provider           = "uv"

[tool.pytest.ini_options]
    addopts   = ["--color=yes", "--strict-markers", "-ra"]
    cache_dir = ".cache/pytest"
    testpaths = ["tests"]

[tool.ruff]
    exclude        = [".cache", ".git", ".ruff_cache", ".venv", ".worktrees"]
    fix            = true
    line-length    = 100
    output-format  = "grouped"
    src            = ["hooks", "tests"]
    target-version = "py312"

    [tool.ruff.lint]
        ignore = [
            "ANN002",  # Missing type annotation for `*args`
            "ANN003",  # Missing type annotation for `**kwargs`
            "ANN204",  # missing return type annotation for special method `__init__`
            "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
            "B006",    # mutable-argument-default
            "B008",    # function-call-in-default-argument
            "COM812",  # Trailing comma missing
            "CPY001",  # Missing copyright notice at top of file
            "D107",    # undocumented-public-init
            "E501",    # line-too-long
            "FIX002",  # Line contains TODO
            "PLC0415", # Imports should be at top of file
            "S311",    # suspicious-non-cryptographic-random-usage
            "TD001",   # invalid-todo-tag
            "TD002",   # Missing author in TODO
            "TD003",   # Missing issue link on the line following this TODO
        ]
        per-file-ignores = { "tests/**/*.py" = [
            "ANN001",  # Missing type annotation for function argument
            "ANN201",  # Missing return type annotation
            "ARG001",  # Unused function argument
            "ARG002",  # Unused method argument
            "C901",    # Function too complex (test runners can branch a lot)
            "D101",    # Missing docstring in public class (test fixture dataclasses)
            "D102",    # Missing docstring in public method
            "D103",    # Missing docstring in public function (test helpers)
            "ERA001",  # Commented out code
            "PERF401", # Use list.extend (clarity wins in test setup)
            "PGH003",  # Use specific rule codes when ignoring type issues
            "PLR0913", # Too many arguments
            "PLR2004", # Magic value used in comparison
            "S101",    # Use of assert
            "S603",    # subprocess call check
            "S607",    # Starting a process with a partial executable path
            "SLF001",  # Calling private method
            "T201",    # `print` found (standalone test runners print results)
        ] }
        select = ["ALL"]
        unfixable = [
            "ERA001", # Commented out code
            "F401",   # unused-import
            "F841",   # unused-variable
        ]

        [tool.ruff.lint.mccabe]
            max-complexity = 10

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 6

    [tool.ruff.format]
        indent-style              = "space"
        line-ending               = "auto"
        quote-style               = "double"
        skip-magic-trailing-comma = false

[tool.ty.terminal]
    error-on-warning = true
